Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3107

Messages following a queue's Alternate-Exchange do not follow the exchange's Alternate-Exchange

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.8
    • 0.9
    • C++ Broker
    • None

    Description

      When a queue is deleted, any messages within the queue are delivered to that
      queue's alternate exchange. If no bindings in that exchange match, then the
      messages are dropped. This happens even if the exchange has and alternate
      exchange.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: