cpp/src/qpid/broker/DeliveryRecord.cpp
@@ -135,7 +135,7 @@ void DeliveryRecord::reject()
         Exchange::shared_ptr alternate = queue->getAlternateExchange();
         if (alternate) {
             DeliverableMessage delivery(msg.payload);
-            alternate->route(delivery, msg.payload->getRoutingKey(), msg.payload->getApplicationHeaders());
+            alternate->routeWithAlternate(delivery);
             QPID_LOG(info, "Routed rejected message from " << queue->getName() << " to "
                      << alternate->getName());
         } else {
